[package]
name = "rust_cli_tool"
version = "0.1.0"
edition = "2021"
authors = ["Rust学习者 <learner@example.com>"]
description = "一个简单的命令行工具，用于学习Rust基础知识"
license = "MIT"

[dependencies]
clap = "4.0"          # 命令行参数解析
serde = "1.0"         # 序列化/反序列化
serde_json = "1.0"    # JSON支持
chrono = "0.4"        # 日期时间处理

[dependencies.clap]
version = "4.0"
features = ["derive"]  # 启用derive宏功能 